@@ -20,8 +20,9 @@ package org.jackhuang.hmcl.game;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParseException;
 import com.google.gson.reflect.TypeToken;
+import javafx.beans.binding.Binding;
 import javafx.beans.binding.Bindings;
-import javafx.beans.binding.StringBinding;
+import javafx.beans.binding.ObjectBinding;
 import javafx.scene.image.Image;
 import org.jackhuang.hmcl.Metadata;
 import org.jackhuang.hmcl.download.DefaultDependencyManager;
@@ -45,7 +46,7 @@ import org.jackhuang.hmcl.setting.GameDirectory;
 import org.jackhuang.hmcl.setting.ProxyType;
 import org.jackhuang.hmcl.setting.SettingFileUtils;
 import org.jackhuang.hmcl.setting.GameSettingsPresetID;
-import org.jackhuang.hmcl.setting.VersionIconType;
+import org.jackhuang.hmcl.setting.GameInstanceIconType;
 import org.jackhuang.hmcl.ui.FXUtils;
 import org.jackhuang.hmcl.util.FileSaver;
 import org.jackhuang.hmcl.util.Lang;
@@ -81,10 +82,10 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     /// @param repository the owning game repository
     /// @param instanceId the game instance ID, or `null` when only repository context is available
     @NotNullByDefault
-    public record InstanceReference(HMCLGameRepository repository, @Nullable String instanceId) {
+    public record InstanceReference(HMCLGameRepository repository, @Nullable GameInstanceID instanceId) {
     }
 
-    /// Directory under the version root that stores HMCL-managed instance metadata.
+    /// Directory under the instance root that stores HMCL-managed instance metadata.
     private static final String INSTANCE_METADATA_DIRECTORY = ".hmcl";
 
     /// Directory under the instance metadata directory that stores instance configuration files.
@@ -100,22 +101,22 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     private final GameDirectory gameDirectory;
 
     /// The selected instance ID persisted for this repository's game directory.
-    private final StringBinding selectedInstance;
+    private final ObjectBinding<@Nullable GameInstanceID> selectedInstance;
 
     // instance game settings
-    private final Map<String, GameSettings.Instance> instanceGameSettings = new HashMap<>();
+    private final Map<GameInstanceID, GameSettings.Instance> instanceGameSettings = new HashMap<>();
     /// Instance IDs whose local game settings file has already been checked.
-    private final Set<String> loadedInstanceGameSettings = new HashSet<>();
-    private final Set<String> readOnlyInstanceGameSettings = new HashSet<>();
-    private final Set<String> beingModpackVersions = new HashSet<>();
+    private final Set<GameInstanceID> loadedInstanceGameSettings = new HashSet<>();
+    private final Set<GameInstanceID> readOnlyInstanceGameSettings = new HashSet<>();
+    private final Set<GameInstanceID> beingModpackInstances = new HashSet<>();
 
-    public final EventManager<Event> onVersionIconChanged = new EventManager<>();
+    public final EventManager<Event> onInstanceIconChanged = new EventManager<>();
 
     /// Creates a repository backed by the given game directory.
     public HMCLGameRepository(GameDirectory gameDirectory) {
         super(gameDirectory.getPath().toPath());
         this.gameDirectory = gameDirectory;
-        this.selectedInstance = Bindings.stringValueAt(settings().getSelectedInstance(), gameDirectory.getId());
+        this.selectedInstance = Bindings.valueAt(settings().getSelectedInstance(), gameDirectory.getId());
         gameDirectory.pathProperty().addListener((a, b, newValue) -> changeDirectory(newValue.toPath()));
     }
 
@@ -125,26 +126,26 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     }
 
     /// Returns the selected instance ID property for this repository's game directory.
-    public StringBinding selectedInstanceProperty() {
+    public Binding<@Nullable GameInstanceID> selectedInstanceProperty() {
         return selectedInstance;
     }
 
     /// Returns the selected instance ID for this repository's game directory.
-    public @Nullable String getSelectedInstance() {
+    public @Nullable GameInstanceID getSelectedInstance() {
         return selectedInstance.get();
     }
 
     /// Sets the selected instance ID for this repository's game directory.
-    public void setSelectedInstance(@Nullable String instance) {
-        settings().setSelectedInstance(gameDirectory.getId(), instance);
+    public void setSelectedInstance(@Nullable GameInstanceID instanceId) {
+        settings().setSelectedInstance(gameDirectory.getId(), instanceId);
     }
 
-    /// Refreshes the selected instance ID after versions are loaded.
+    /// Refreshes the selected instance ID after instances are loaded.
     public void refreshSelectedInstance() {
-        @Nullable String selectedInstance = settings().getSelectedInstance(gameDirectory.getId());
-        @Nullable String refreshedInstance = selectedInstance;
-        if (!hasVersion(refreshedInstance)) {
-            refreshedInstance = getVersions().isEmpty() ? null : getVersions().iterator().next().getId();
+        @Nullable GameInstanceID selectedInstance = settings().getSelectedInstance(gameDirectory.getId());
+        @Nullable GameInstanceID refreshedInstance = selectedInstance;
+        if (refreshedInstance == null || !hasInstance(refreshedInstance)) {
+            refreshedInstance = getInstanceManifests().isEmpty() ? null : getInstanceManifests().iterator().next().id();
         }
         if (!Objects.equals(selectedInstance, refreshedInstance)) {
             setSelectedInstance(refreshedInstance);
@@ -162,24 +163,24 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     }
 
     @Override
-    public Path getRunDirectory(String id) {
-        if (beingModpackVersions.contains(id) || isModpack(id)) {
-            return getVersionRoot(id);
+    public Path getRunDirectory(GameInstanceID instanceId) {
+        if (beingModpackInstances.contains(instanceId) || isModpack(instanceId)) {
+            return getInstanceRoot(instanceId);
         }
 
-        GameSettings.Instance localSetting = getInstanceGameSettings(id);
+        GameSettings.Instance localSetting = getInstanceGameSettings(instanceId);
         boolean useInstanceRunningDirectory =
                 localSetting != null && localSetting.getOverrideProperties().contains(GameSettings.PROPERTY_RUNNING_DIRECTORY);
 
         String runningDirectory = getSelectedRunningDirectory(localSetting, useInstanceRunningDirectory);
         if (StringUtils.isBlank(runningDirectory)) {
-            return useInstanceRunningDirectory ? getVersionRoot(id) : super.getRunDirectory(id);
+            return useInstanceRunningDirectory ? getInstanceRoot(instanceId) : super.getRunDirectory(instanceId);
         }
 
         try {
             return Path.of(runningDirectory);
         } catch (InvalidPathException ignored) {
-            return getVersionRoot(id);
+            return getInstanceRoot(instanceId);
         }
     }
 
@@ -201,24 +202,24 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         return Objects.requireNonNullElse(parent.runningDirectoryProperty().getValue(), "");
     }
 
-    public Stream<Version> getDisplayVersions() {
-        return getVersions().stream()
+    public Stream<GameInstanceManifest> getDisplayInstanceManifests() {
+        return getInstanceManifests().stream()
                 .filter(v -> !v.isHidden())
-                .sorted(Comparator.comparing((Version v) -> Lang.requireNonNullElse(v.getReleaseTime(), Instant.EPOCH))
-                        .thenComparing(v -> VersionNumber.asVersion(v.getId())));
+                .sorted(Comparator.comparing((GameInstanceManifest v) -> Lang.requireNonNullElse(v.releaseTime(), Instant.EPOCH))
+                        .thenComparing(v -> VersionNumber.asVersion(v.id().id())));
     }
 
     @Override
-    protected void refreshVersionsImpl() {
+    protected void refreshImpl() {
         instanceGameSettings.clear();
         loadedInstanceGameSettings.clear();
         readOnlyInstanceGameSettings.clear();
-        super.refreshVersionsImpl();
-        versions.keySet().forEach(this::loadInstanceGameSettings);
+        super.refreshImpl();
+        getInstanceManifests().stream().map(GameInstanceManifest::id).forEach(this::loadInstanceGameSettings);
 
         try {
             Path file = getBaseDirectory().resolve("launcher_profiles.json");
-            if (!Files.exists(file) && !versions.isEmpty()) {
+            if (!Files.exists(file) && !getInstanceManifests().isEmpty()) {
                 Files.createDirectories(file.getParent());
                 Files.writeString(file, PROFILE);
             }
@@ -229,7 +230,7 @@ public final class HMCLGameRepository extends DefaultGameRepository {
 
     public void changeDirectory(Path newDirectory) {
         setBaseDirectory(newDirectory);
-        refreshVersionsAsync().start();
+        refreshAsync().start();
     }
 
     private void clean(Path directory) throws IOException {
@@ -237,56 +238,56 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         FileUtils.deleteDirectory(directory.resolve("logs"));
     }
 
-    public void clean(String id) throws IOException {
+    public void clean(GameInstanceID instanceId) throws IOException {
         clean(getBaseDirectory());
-        clean(getRunDirectory(id));
+        clean(getRunDirectory(instanceId));
     }
 
-    /// Removes a version from disk and drops any cached instance settings for that version.
+    /// Removes an instance from disk and clears its cached HMCL settings state.
     @Override
-    public boolean removeVersionFromDisk(String id) {
-        boolean removed = super.removeVersionFromDisk(id);
+    public boolean removeInstanceFromDisk(GameInstanceID instanceId) {
+        boolean removed = super.removeInstanceFromDisk(instanceId);
         if (removed) {
-            instanceGameSettings.remove(id);
-            loadedInstanceGameSettings.remove(id);
-            readOnlyInstanceGameSettings.remove(id);
-            beingModpackVersions.remove(id);
+            instanceGameSettings.remove(instanceId);
+            loadedInstanceGameSettings.remove(instanceId);
+            readOnlyInstanceGameSettings.remove(instanceId);
+            beingModpackInstances.remove(instanceId);
         }
         return removed;
     }
 
-    public void duplicateVersion(String srcId, String dstId, boolean copySaves) throws IOException {
-        Path srcDir = getVersionRoot(srcId);
-        Path dstDir = getVersionRoot(dstId);
+    public void duplicateInstance(GameInstanceID srcId, GameInstanceID dstId, boolean copySaves) throws IOException {
+        Path srcDir = getInstanceRoot(srcId);
+        Path dstDir = getInstanceRoot(dstId);
 
-        Version fromVersion = getVersion(srcId);
+        GameInstanceManifest fromManifest = getInstanceManifest(srcId);
 
         List<String> blackList = new ArrayList<>(ModAdviser.MODPACK_BLACK_LIST);
-        blackList.add(srcId + ".jar");
-        blackList.add(srcId + ".json");
+        blackList.add(srcId.id() + ".jar");
+        blackList.add(srcId.id() + ".json");
         if (!copySaves)
             blackList.add("saves");
 
-        if (Files.exists(dstDir)) throw new IOException("Version exists");
+        if (Files.exists(dstDir)) throw new IOException("Instance exists");
 
         Files.createDirectories(dstDir);
         FileUtils.copyDirectory(srcDir, dstDir, path -> Modpack.acceptFile(path, blackList, null));
 
-        Path fromJson = srcDir.resolve(srcId + ".json");
-        Path fromJar = srcDir.resolve(srcId + ".jar");
-        Path toJson = dstDir.resolve(dstId + ".json");
-        Path toJar = dstDir.resolve(dstId + ".jar");
+        Path fromJson = srcDir.resolve(srcId.id() + ".json");
+        Path fromJar = srcDir.resolve(srcId.id() + ".jar");
+        Path toJson = dstDir.resolve(dstId.id() + ".json");
+        Path toJar = dstDir.resolve(dstId.id() + ".jar");
 
         if (Files.exists(fromJar)) {
             Files.copy(fromJar, toJar);
         }
         Files.copy(fromJson, toJson);
 
-        JsonUtils.writeToJsonFile(toJson, fromVersion.setId(dstId).setJar(dstId));
+        JsonUtils.writeToJsonFile(toJson, fromManifest.withId(dstId).withJar(dstId));
 
         boolean copyOriginalGameDir;
         try {
-            copyOriginalGameDir = !Files.isSameFile(getRunDirectory(srcId), getVersionRoot(srcId));
+            copyOriginalGameDir = !Files.isSameFile(getRunDirectory(srcId), getInstanceRoot(srcId));
         } catch (IOException e) {
             copyOriginalGameDir = true;
         }
@@ -305,48 +306,48 @@ public final class HMCLGameRepository extends DefaultGameRepository {
             FileUtils.copyDirectory(srcGameDir, dstGameDir, path -> Modpack.acceptFile(path, blackList, null));
     }
 
-    private GameSettings.Instance copyInstanceGameSettings(String id) {
-        GameSettings.Instance setting = getInstanceGameSettings(id);
+    private GameSettings.Instance copyInstanceGameSettings(GameInstanceID instanceId) {
+        GameSettings.Instance setting = getInstanceGameSettings(instanceId);
         if (setting != null) {
             return JsonUtils.clone(LauncherSettings.SETTINGS_GSON, setting, TypeToken.get(GameSettings.Instance.class));
         }
 
         GameSettings.Instance copied = new GameSettings.Instance();
-        copied.parentProperty().setValue(getEffectiveGameSettings(id).getPreset().idProperty().getValue());
+        copied.parentProperty().setValue(getEffectiveGameSettings(instanceId).getPreset().idProperty().getValue());
         return copied;
     }
 
-    /// Returns the HMCL-managed metadata directory under the version root.
+    /// Returns the HMCL-managed metadata directory under the instance root.
     ///
     /// This directory stores instance-scoped files owned by HMCL.
-    public Path getInstanceMetadataDirectory(String id) {
-        return getVersionRoot(id).resolve(INSTANCE_METADATA_DIRECTORY);
+    public Path getInstanceMetadataDirectory(GameInstanceID instanceId) {
+        return getInstanceRoot(instanceId).resolve(INSTANCE_METADATA_DIRECTORY);
     }
 
     /// Returns the HMCL-managed configuration directory under the instance metadata directory.
-    public Path getInstanceConfigDirectory(String id) {
-        return getInstanceMetadataDirectory(id).resolve(INSTANCE_CONFIG_DIRECTORY);
+    public Path getInstanceConfigDirectory(GameInstanceID instanceId) {
+        return getInstanceMetadataDirectory(instanceId).resolve(INSTANCE_CONFIG_DIRECTORY);
     }
 
     /// Returns the HMCL-managed state directory under the instance metadata directory.
-    public Path getInstanceStateDirectory(String id) {
-        return getInstanceMetadataDirectory(id).resolve(INSTANCE_STATE_DIRECTORY);
+    public Path getInstanceStateDirectory(GameInstanceID instanceId) {
+        return getInstanceMetadataDirectory(instanceId).resolve(INSTANCE_STATE_DIRECTORY);
     }
 
     /// Returns the current local game settings path under the instance configuration directory.
-    private Path getInstanceGameSettingsFile(String id) {
-        return getInstanceConfigDirectory(id).resolve(INSTANCE_GAME_SETTINGS_FILENAME);
+    private Path getInstanceGameSettingsFile(GameInstanceID instanceId) {
+        return getInstanceConfigDirectory(instanceId).resolve(INSTANCE_GAME_SETTINGS_FILENAME);
     }
 
-    private void loadInstanceGameSettings(String id) {
-        loadedInstanceGameSettings.add(id);
-        InstanceGameSettingsLoadResult result = loadGameSettingsFile(getInstanceGameSettingsFile(id));
+    private void loadInstanceGameSettings(GameInstanceID instanceId) {
+        loadedInstanceGameSettings.add(instanceId);
+        InstanceGameSettingsLoadResult result = loadGameSettingsFile(getInstanceGameSettingsFile(instanceId));
         if (result.setting() != null) {
-            initInstanceGameSettings(id, result.setting(), result.allowSave());
+            initInstanceGameSettings(instanceId, result.setting(), result.allowSave());
             return;
         }
         if (!result.allowSave()) {
-            readOnlyInstanceGameSettings.add(id);
+            readOnlyInstanceGameSettings.add(instanceId);
             return;
         }
 
@@ -357,15 +358,15 @@ public final class HMCLGameRepository extends DefaultGameRepository {
 
         LegacyGameSettingsMigrator.InstanceMigrationResult migrationResult =
                 LegacyGameSettingsMigrator.migrateInstanceGameSettings(
-                        this, id,
+                        this, instanceId,
                         legacyParent);
         if (migrationResult != null) {
-            initInstanceGameSettings(id, migrationResult.setting());
+            initInstanceGameSettings(instanceId, migrationResult.setting());
             try {
-                saveGameSettingsSync(id);
+                saveGameSettingsSync(instanceId);
                 migrationResult.saveReceipt();
             } catch (IOException e) {
-                LOG.warning("Failed to save migrated instance game settings for " + id, e);
+                LOG.warning("Failed to save migrated instance game settings for " + instanceId, e);
             }
             return;
         }
@@ -430,35 +431,35 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         }
     }
 
-    public @Nullable GameSettings.Instance createInstanceGameSettings(String id) {
-        if (!hasVersion(id)) {
+    public @Nullable GameSettings.Instance createInstanceGameSettings(GameInstanceID instanceId) {
+        if (!hasInstance(instanceId)) {
             return null;
         }
-        if (readOnlyInstanceGameSettings.contains(id)) {
+        if (readOnlyInstanceGameSettings.contains(instanceId)) {
             return null;
         }
-        if (instanceGameSettings.containsKey(id)) {
-            return getInstanceGameSettings(id);
+        if (instanceGameSettings.containsKey(instanceId)) {
+            return getInstanceGameSettings(instanceId);
         }
 
         GameSettings.Instance setting = new GameSettings.Instance();
-        return initInstanceGameSettings(id, setting);
+        return initInstanceGameSettings(instanceId, setting);
     }
 
-    private GameSettings.Instance initInstanceGameSettings(String id, GameSettings.Instance setting) {
-        return initInstanceGameSettings(id, setting, true);
+    private GameSettings.Instance initInstanceGameSettings(GameInstanceID instanceId, GameSettings.Instance setting) {
+        return initInstanceGameSettings(instanceId, setting, true);
     }
 
-    private GameSettings.Instance initInstanceGameSettings(String id, GameSettings.Instance setting, boolean allowSave) {
+    private GameSettings.Instance initInstanceGameSettings(GameInstanceID instanceId, GameSettings.Instance setting, boolean allowSave) {
         normalizeRunningDirectoryOverride(setting);
         setting.setSavable(allowSave);
-        loadedInstanceGameSettings.add(id);
-        instanceGameSettings.put(id, setting);
+        loadedInstanceGameSettings.add(instanceId);
+        instanceGameSettings.put(instanceId, setting);
         if (allowSave) {
-            readOnlyInstanceGameSettings.remove(id);
-            setting.addListener(a -> saveGameSettings(id));
+            readOnlyInstanceGameSettings.remove(instanceId);
+            setting.addListener(a -> saveGameSettings(instanceId));
         } else {
-            readOnlyInstanceGameSettings.add(id);
+            readOnlyInstanceGameSettings.add(instanceId);
         }
         return setting;
     }
@@ -471,59 +472,59 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     }
 
     @Nullable
-    public GameSettings.Instance getInstanceGameSettings(String id) {
-        if (!loadedInstanceGameSettings.contains(id)) {
-            loadInstanceGameSettings(id);
+    public GameSettings.Instance getInstanceGameSettings(GameInstanceID instanceId) {
+        if (!loadedInstanceGameSettings.contains(instanceId)) {
+            loadInstanceGameSettings(instanceId);
         }
-        return instanceGameSettings.get(id);
+        return instanceGameSettings.get(instanceId);
     }
 
     @Nullable
-    public GameSettings.Instance getInstanceGameSettingsOrCreate(String id) {
-        GameSettings.Instance setting = getInstanceGameSettings(id);
+    public GameSettings.Instance getInstanceGameSettingsOrCreate(GameInstanceID instanceId) {
+        GameSettings.Instance setting = getInstanceGameSettings(instanceId);
         if (setting == null) {
-            setting = createInstanceGameSettings(id);
+            setting = createInstanceGameSettings(instanceId);
         }
         return setting;
     }
 
     /// Returns whether the instance-specific game settings file cannot be overwritten safely.
     ///
-    /// @param id the instance ID
+    /// @param instanceId the instance ID
     /// @return whether the instance settings are loaded in read-only mode
-    public boolean isInstanceGameSettingsReadOnly(String id) {
-        if (!loadedInstanceGameSettings.contains(id)) {
-            loadInstanceGameSettings(id);
+    public boolean isInstanceGameSettingsReadOnly(GameInstanceID instanceId) {
+        if (!loadedInstanceGameSettings.contains(instanceId)) {
+            loadInstanceGameSettings(instanceId);
         }
 
-        return readOnlyInstanceGameSettings.contains(id);
+        return readOnlyInstanceGameSettings.contains(instanceId);
     }
 
     /// Backs up and overwrites the instance-specific game settings file with the currently loaded settings.
     ///
-    /// @param id the instance ID
-    public void forceOverwriteInstanceGameSettings(String id) {
-        if (!loadedInstanceGameSettings.contains(id)) {
-            loadInstanceGameSettings(id);
+    /// @param instanceId the instance ID
+    public void forceOverwriteInstanceGameSettings(GameInstanceID instanceId) {
+        if (!loadedInstanceGameSettings.contains(instanceId)) {
+            loadInstanceGameSettings(instanceId);
         }
 
-        GameSettings.Instance setting = instanceGameSettings.get(id);
+        GameSettings.Instance setting = instanceGameSettings.get(instanceId);
         if (setting == null) {
             setting = new GameSettings.Instance();
-            instanceGameSettings.put(id, setting);
-            loadedInstanceGameSettings.add(id);
+            instanceGameSettings.put(instanceId, setting);
+            loadedInstanceGameSettings.add(instanceId);
         }
 
         boolean installAutoSave = !setting.isSavable();
-        Path file = getInstanceGameSettingsFile(id).toAbsolutePath().normalize();
+        Path file = getInstanceGameSettingsFile(instanceId).toAbsolutePath().normalize();
         SettingFileUtils.backupInvalidConfig(file);
         setting.setSchema(GameSettings.Instance.CURRENT_SCHEMA);
         setting.setSavable(true);
         setting.setBackupOnNextSave(false);
-        readOnlyInstanceGameSettings.remove(id);
-        saveGameSettings(id);
+        readOnlyInstanceGameSettings.remove(instanceId);
+        saveGameSettings(instanceId);
         if (installAutoSave) {
-            setting.addListener(a -> saveGameSettings(id));
+            setting.addListener(a -> saveGameSettings(instanceId));
         }
     }
 
@@ -532,6 +533,33 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         @Nullable GameSettingsPresetID parent = instance != null ? instance.parentProperty().getValue() : null;
         GameSettings.Preset parentSetting = SettingsManager.getGameSettings(parent);
         return parentSetting != null ? parentSetting : SettingsManager.getDefaultGameSettingsPresetOrCreate();
+    }
+
+    public GameSettings.Effective getEffectiveGameSettings(GameInstanceID instanceId) {
+        GameSettings.Instance instance = getInstanceGameSettings(instanceId);
+        return GameSettings.resolve(getParentGameSettings(instance), instance);
+    }
+
+    public void applyDefaultIsolationSetting(GameInstanceID instanceId) {
+        if (!hasInstance(instanceId)) {
+            return;
+        }
+
+        GameSettings.Instance instanceSetting = getInstanceGameSettings(instanceId);
+        GameSettings.Preset preset = getParentGameSettings(instanceSetting);
+        DefaultIsolationType type = Lang.requireNonNullElse(preset.defaultIsolationTypeProperty().getValue(), DefaultIsolationType.MODDED);
+        boolean isolated = switch (type) {
+            case NEVER -> false;
+            case ALWAYS -> true;
+            case MODDED -> LibraryAnalyzer.isModded(getResolvedInstanceManifest(instanceId));
+        };
+
+        if (isolated) {
+            GameSettings.Instance setting = instanceSetting != null ? instanceSetting : getInstanceGameSettingsOrCreate(instanceId);
+            if (setting != null && setting.getOverrideProperties().add(GameSettings.PROPERTY_RUNNING_DIRECTORY)) {
+                saveGameSettings(instanceId);
+            }
+        }
     }
 
     /// Returns whether a new instance should use an isolated running directory under the default isolation settings.
@@ -545,28 +573,23 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         };
     }
 
-    /// Applies default isolation to a new instance before the version metadata is saved.
-    public void applyDefaultIsolationSettingForNewInstance(String id, boolean modded) {
-        if (!shouldIsolateNewInstance(modded) || readOnlyInstanceGameSettings.contains(id)) {
+    /// Applies default isolation to a new instance before its manifest is saved.
+    public void applyDefaultIsolationSettingForNewInstance(GameInstanceID instanceId, boolean modded) {
+        if (!shouldIsolateNewInstance(modded) || readOnlyInstanceGameSettings.contains(instanceId)) {
             return;
         }
 
-        GameSettings.Instance setting = getInstanceGameSettings(id);
+        GameSettings.Instance setting = getInstanceGameSettings(instanceId);
         if (setting == null) {
-            setting = initInstanceGameSettings(id, new GameSettings.Instance());
+            setting = initInstanceGameSettings(instanceId, new GameSettings.Instance());
         }
         if (setting.getOverrideProperties().add(GameSettings.PROPERTY_RUNNING_DIRECTORY)) {
-            saveGameSettings(id);
+            saveGameSettings(instanceId);
         }
     }
 
-    public GameSettings.Effective getEffectiveGameSettings(String id) {
-        GameSettings.Instance instance = getInstanceGameSettings(id);
-        return GameSettings.resolve(getParentGameSettings(instance), instance);
-    }
-
-    public Optional<Path> getVersionIconFile(String id) {
-        Path root = getVersionRoot(id);
+    public Optional<Path> getInstanceIconFile(GameInstanceID instanceId) {
+        Path root = getInstanceRoot(instanceId);
 
         for (String extension : FXUtils.IMAGE_EXTENSIONS) {
             Path file = root.resolve("icon." + extension);
@@ -578,19 +601,19 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         return Optional.empty();
     }
 
-    public void setVersionIconFile(String id, Path iconFile) throws IOException {
+    public void setInstanceIconFile(GameInstanceID instanceId, Path iconFile) throws IOException {
         String ext = FileUtils.getExtension(iconFile).toLowerCase(Locale.ROOT);
         if (!FXUtils.IMAGE_EXTENSIONS.contains(ext)) {
             throw new IllegalArgumentException("Unsupported icon file: " + ext);
         }
 
-        deleteIconFile(id);
+        deleteIconFile(instanceId);
 
-        FileUtils.copyFile(iconFile, getVersionRoot(id).resolve("icon." + ext));
+        FileUtils.copyFile(iconFile, getInstanceRoot(instanceId).resolve("icon." + ext));
     }
 
-    public void deleteIconFile(String id) {
-        Path root = getVersionRoot(id);
+    public void deleteIconFile(GameInstanceID instanceId) {
+        Path root = getInstanceRoot(instanceId);
         for (String extension : FXUtils.IMAGE_EXTENSIONS) {
             Path file = root.resolve("icon." + extension);
             try {
@@ -601,69 +624,69 @@ public final class HMCLGameRepository extends DefaultGameRepository {
         }
     }
 
-    public Image getVersionIconImage(@Nullable String id) {
-        if (id == null || !isLoaded())
-            return VersionIconType.DEFAULT.getIcon();
+    public Image getInstanceIconImage(@Nullable GameInstanceID instanceId) {
+        if (instanceId == null || !isLoaded())
+            return GameInstanceIconType.DEFAULT.getIcon();
 
-        GameSettings.Instance setting = getInstanceGameSettings(id);
-        VersionIconType iconType = setting != null ? Lang.requireNonNullElse(setting.iconProperty().getValue(), VersionIconType.DEFAULT) : VersionIconType.DEFAULT;
+        GameSettings.Instance setting = getInstanceGameSettings(instanceId);
+        GameInstanceIconType iconType = setting != null ? Lang.requireNonNullElse(setting.iconProperty().getValue(), GameInstanceIconType.DEFAULT) : GameInstanceIconType.DEFAULT;
 
-        if (iconType == VersionIconType.DEFAULT) {
-            Version version = getVersion(id).resolve(this);
-            Optional<Path> iconFile = getVersionIconFile(id);
+        if (iconType == GameInstanceIconType.DEFAULT) {
+            GameInstanceManifest.Resolved resolvedInstanceManifest = getResolvedInstanceManifest(instanceId);
+            Optional<Path> iconFile = getInstanceIconFile(instanceId);
             if (iconFile.isPresent()) {
                 try {
                     return FXUtils.loadImage(iconFile.get(), 64, 64, true, true);
                 } catch (Exception e) {
-                    LOG.warning("Failed to load version icon of " + id, e);
+                    LOG.warning("Failed to load instance icon of " + instanceId, e);
                 }
             }
 
-            if (LibraryAnalyzer.isModded(this, version)) {
-                LibraryAnalyzer libraryAnalyzer = LibraryAnalyzer.analyze(version, null);
+            if (LibraryAnalyzer.isModded(resolvedInstanceManifest)) {
+                LibraryAnalyzer libraryAnalyzer = LibraryAnalyzer.analyze(resolvedInstanceManifest, null);
                 if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.FABRIC))
-                    return VersionIconType.FABRIC.getIcon();
+                    return GameInstanceIconType.FABRIC.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.QUILT))
-                    return VersionIconType.QUILT.getIcon();
+                    return GameInstanceIconType.QUILT.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.LEGACY_FABRIC))
-                    return VersionIconType.LEGACY_FABRIC.getIcon();
+                    return GameInstanceIconType.LEGACY_FABRIC.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.NEO_FORGE))
-                    return VersionIconType.NEO_FORGE.getIcon();
+                    return GameInstanceIconType.NEO_FORGE.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.FORGE))
-                    return VersionIconType.FORGE.getIcon();
+                    return GameInstanceIconType.FORGE.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.CLEANROOM))
-                    return VersionIconType.CLEANROOM.getIcon();
+                    return GameInstanceIconType.CLEANROOM.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.LITELOADER))
-                    return VersionIconType.CHICKEN.getIcon();
+                    return GameInstanceIconType.CHICKEN.getIcon();
                 else if (libraryAnalyzer.has(LibraryAnalyzer.LibraryType.OPTIFINE))
-                    return VersionIconType.OPTIFINE.getIcon();
+                    return GameInstanceIconType.OPTIFINE.getIcon();
             }
 
-            String gameVersion = getGameVersion(version).orElse(null);
+            String gameVersion = getGameVersion(resolvedInstanceManifest.launchManifest()).orElse(null);
             if (gameVersion != null) {
                 GameVersionNumber versionNumber = GameVersionNumber.asGameVersion(gameVersion);
                 if (versionNumber.isAprilFools()) {
-                    return VersionIconType.APRIL_FOOLS.getIcon();
+                    return GameInstanceIconType.APRIL_FOOLS.getIcon();
                 } else if (versionNumber instanceof GameVersionNumber.LegacySnapshot) {
-                    return VersionIconType.COMMAND.getIcon();
+                    return GameInstanceIconType.COMMAND.getIcon();
                 } else if (versionNumber instanceof GameVersionNumber.Old) {
-                    return VersionIconType.CRAFT_TABLE.getIcon();
+                    return GameInstanceIconType.CRAFT_TABLE.getIcon();
                 }
             }
-            return VersionIconType.GRASS.getIcon();
+            return GameInstanceIconType.GRASS.getIcon();
         } else {
             return iconType.getIcon();
         }
     }
 
-    public void saveGameSettings(String id) {
-        if (!instanceGameSettings.containsKey(id) || readOnlyInstanceGameSettings.contains(id))
+    public void saveGameSettings(GameInstanceID instanceId) {
+        if (!instanceGameSettings.containsKey(instanceId) || readOnlyInstanceGameSettings.contains(instanceId))
             return;
-        GameSettings.Instance setting = instanceGameSettings.get(id);
+        GameSettings.Instance setting = instanceGameSettings.get(instanceId);
         if (setting == null) {
             return;
         }
-        Path file = getInstanceGameSettingsFile(id).toAbsolutePath().normalize();
+        Path file = getInstanceGameSettingsFile(instanceId).toAbsolutePath().normalize();
         try {
             Files.createDirectories(file.getParent());
         } catch (IOException e) {
@@ -679,19 +702,19 @@ public final class HMCLGameRepository extends DefaultGameRepository {
 
     /// Saves instance-specific game settings synchronously.
     ///
-    /// @param id the instance ID
+    /// @param instanceId the instance ID
     /// @throws IOException if saving the file fails
-    private void saveGameSettingsSync(String id) throws IOException {
-        if (!instanceGameSettings.containsKey(id) || readOnlyInstanceGameSettings.contains(id)) {
+    private void saveGameSettingsSync(GameInstanceID instanceId) throws IOException {
+        if (!instanceGameSettings.containsKey(instanceId) || readOnlyInstanceGameSettings.contains(instanceId)) {
             return;
         }
 
-        GameSettings.Instance setting = instanceGameSettings.get(id);
+        GameSettings.Instance setting = instanceGameSettings.get(instanceId);
         if (setting == null) {
             return;
         }
 
-        Path file = getInstanceGameSettingsFile(id).toAbsolutePath().normalize();
+        Path file = getInstanceGameSettingsFile(instanceId).toAbsolutePath().normalize();
         Files.createDirectories(file.getParent());
         if (setting.isBackupOnNextSave()) {
             setting.setBackupOnNextSave(false);
@@ -709,11 +732,11 @@ public final class HMCLGameRepository extends DefaultGameRepository {
             boolean allowSave) {
     }
 
-    public LaunchOptions.Builder getLaunchOptions(String version, JavaRuntime javaVersion, Path gameDir, List<String> javaAgents, List<String> javaArguments, boolean makeLaunchScript) {
-        GameSettings.Effective vs = getEffectiveGameSettings(version);
+    public LaunchOptions.Builder getLaunchOptions(GameInstanceID instanceId, JavaRuntime javaVersion, Path gameDir, List<String> javaAgents, List<String> javaArguments, boolean makeLaunchScript) {
+        GameSettings.Effective vs = getEffectiveGameSettings(instanceId);
         boolean noJVMOptions = vs.getInheritable(GameSettings::noJVMOptionsProperty);
         boolean autoMemory = vs.getInheritable(GameSettings::autoMemoryProperty);
-        GameVersionNumber gameVersionNumber = GameVersionNumber.asGameVersion(getGameVersion(version));
+        GameVersionNumber gameVersionNumber = GameVersionNumber.asGameVersion(getGameVersion(instanceId));
 
         @Nullable Integer maxMemory;
         if (autoMemory) {
@@ -728,7 +751,7 @@ public final class HMCLGameRepository extends DefaultGameRepository {
                 .setGameDir(gameDir)
                 .setJava(javaVersion)
                 .setVersionType(Metadata.TITLE)
-                .setVersionName(version)
+                .setVersionName(instanceId.id())
                 .setProfileName(Metadata.TITLE)
                 .setGameArguments(StringUtils.tokenize(vs.getInheritable(GameSettings::gameArgumentsProperty)))
                 .setOverrideJavaArguments(StringUtils.tokenize(vs.getInheritable(GameSettings::jvmOptionsProperty)))
@@ -773,7 +796,7 @@ public final class HMCLGameRepository extends DefaultGameRepository {
             builder.setQuickPlayOption(quickPlayOption);
         }
 
-        Path json = getModpackConfiguration(version);
+        Path json = getModpackConfiguration(instanceId);
         if (Files.exists(json)) {
             try {
                 String jsonText = Files.readString(json);
@@ -792,27 +815,27 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     }
 
     @Override
-    public Path getModpackConfiguration(String version) {
-        return getVersionRoot(version).resolve("modpack.cfg");
+    public Path getModpackConfiguration(GameInstanceID instanceId) {
+        return getInstanceRoot(instanceId).resolve("modpack.cfg");
     }
 
-    public void markVersionAsModpack(String id) {
-        beingModpackVersions.add(id);
+    public void markInstanceAsModpack(GameInstanceID instanceId) {
+        beingModpackInstances.add(instanceId);
     }
 
-    public void undoMark(String id) {
-        beingModpackVersions.remove(id);
+    public void undoMark(GameInstanceID instanceId) {
+        beingModpackInstances.remove(instanceId);
     }
 
-    public void markVersionLaunchedAbnormally(String id) {
+    public void markInstanceLaunchedAbnormally(GameInstanceID instanceId) {
         try {
-            Files.createFile(getVersionRoot(id).resolve(".abnormal"));
+            Files.createFile(getInstanceRoot(instanceId).resolve(".abnormal"));
         } catch (IOException ignored) {
         }
     }
 
-    public boolean unmarkVersionLaunchedAbnormally(String id) {
-        Path file = getVersionRoot(id).resolve(".abnormal");
+    public boolean unmarkInstanceLaunchedAbnormally(GameInstanceID instanceId) {
+        Path file = getInstanceRoot(instanceId).resolve(".abnormal");
         if (Files.isRegularFile(file)) {
             try {
                 Files.delete(file);
@@ -829,35 +852,42 @@ public final class HMCLGameRepository extends DefaultGameRepository {
     private static final String PROFILE = "{\"selectedProfile\": \"(Default)\",\"profiles\": {\"(Default)\": {\"name\": \"(Default)\"}},\"clientToken\": \"88888888-8888-8888-8888-888888888888\"}";
 
 
-    // These version ids are forbidden because they may conflict with modpack configuration filenames
-    private static final Set<String> FORBIDDEN_VERSION_IDS = new HashSet<>(Arrays.asList(
-            "modpack", "minecraftinstance", "manifest"));
+    // These instance ids are forbidden because they may conflict with modpack configuration filenames
+    private static final Set<String> FORBIDDEN_INSTANCE_IDS = Set.of("modpack", "minecraftinstance", "manifest");
 
-    public static boolean isValidVersionId(String id) {
-        if (FORBIDDEN_VERSION_IDS.contains(id))
+    public static boolean isValidInstanceId(String id) {
+        if (FORBIDDEN_INSTANCE_IDS.contains(id))
             return false;
 
         if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS &&
-                FORBIDDEN_VERSION_IDS.contains(id.toLowerCase(Locale.ROOT)))
+                FORBIDDEN_INSTANCE_IDS.contains(id.toLowerCase(Locale.ROOT)))
             return false;
 
         return FileUtils.isNameValidForJar(id);
     }
 
     /**
-     * Returns true if the given version id conflicts with an existing version.
+     * Returns true if the given instance id conflicts with an existing instance.
      */
-    public boolean versionIdConflicts(String id) {
+    public boolean instanceIdConflicts(String instanceId) {
+        try {
+            return instanceIdConflicts(new GameInstanceID(instanceId));
+        } catch (IllegalArgumentException e) {
+            return false;
+        }
+    }
+
+    public boolean instanceIdConflicts(GameInstanceID id) {
         if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS) {
             // on Windows, filenames are case-insensitive
-            for (String existingId : versions.keySet()) {
-                if (existingId.equalsIgnoreCase(id)) {
+            for (GameInstanceManifest manifest : getInstanceManifests()) {
+                if (manifest.id().toString().equalsIgnoreCase(id.toString())) {
                     return true;
                 }
             }
             return false;
         } else {
-            return versions.containsKey(id);
+            return hasInstance(id);
         }
     }
 
